!fixup design - wrap bar - icon position

--- a/packages/framework/assets/styles/admin/components/wrap/bar.less
+++ b/packages/framework/assets/styles/admin/components/wrap/bar.less
@@ -47,12 +47,13 @@
     &__tooltip {
         position: absolute;
         right: 10px;
-        padding: 14px 5px 7px 5px;
+        padding: 7px 5px 10px 5px;
 
         @media @query-md {
             position: relative;
             right: auto;
             float: right;
+            padding: 14px 5px 7px 5px;
         }
     }
 }
